# open-stereoscope

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-windoes.yml
packaging/: open-stereoscope.spec
scripts/: build_windows.ps1  run_open_stereoscope.py
src/open_stereoscope/: __init__.py  __main__.py  gui.py  processing.py
